Spring Boot 4 upgrade - initial version